# nrf52bike

./: .gitignore  ble_cscs_c.c  ble_cscs_c.h  main.c  platformio.ini
doc/: bike.mmd  main.dot  main.mmd  main2.mmd
font/: Open_Sans_Condensed_Bold_22.h  Open_Sans_Condensed_Bold_31.h  Open_Sans_Condensed_Bold_37.h  Open_Sans_Condensed_Bold_38.h  Open_Sans_Condensed_Bold_49.h  dot.xbm  f22.xbm  f36.xbm
icons/: ic_nav_arrow_finish.xbm  ic_nav_arrow_fork_left.xbm  ic_nav_arrow_fork_right.xbm  ic_nav_arrow_goto_start.xbm  ic_nav_arrow_keep_going.xbm  ic_nav_arrow_keep_left.xbm  ic_nav_arrow_keep_right.xbm  ic_nav_arrow_start.xbm  ic_nav_arrow_turn_hard_left.xbm  ic_nav_arrow_turn_hard_right.xbm  ic_nav_arrow_turn_left.xbm  ic_nav_arrow_turn_right.xbm  ic_nav_arrow_uturn.xbm  ic_nav_outof_route.xbm  ic_nav_roundabout_ccw1_1.xbm  ic_nav_roundabout_ccw1_2.xbm  ic_nav_roundabout_ccw1_3.xbm  ic_nav_roundabout_ccw2_2.xbm  ic_nav_roundabout_ccw2_3.xbm  ic_nav_roundabout_ccw3_3.xbm  ic_nav_roundabout_cw1_1.xbm  ic_nav_roundabout_cw1_2.xbm  ic_nav_roundabout_cw1_3.xbm  ic_nav_roundabout_cw2_2.xbm  ic_nav_roundabout_cw2_3.xbm  ic_nav_roundabout_cw3_3.xbm  ic_nav_roundabout_exit_ccw.xbm  ic_nav_roundabout_exit_cw.xbm  ic_nav_roundabout_fallback.xbm  resize_icons.sh
src/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_GFX_Config.h  Adafruit_ST7735.cpp  Adafruit_ST7735.h  AppCsc.cpp  AppCsc.h  AppId.h  BLEAppBase.cpp  BLEAppBase.h  BLEAppCSC.cpp  BLEAppCSC.h  BLEAppKomoot.cpp  BLEManager.h  (+63 more)
test/: CMakeLists.txt  TftEmu.h  mbed.h  mbed_events.h  test_main.cpp
test/events/: EventQueue.h
(+4 files in other folders)
